--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,11 +6,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Primary Meta Tags -->
-    <title>Macrometa OTT</title>
+    <title>OTT App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#e50914" />
-    <meta name="title" content="Macrometa OTT">
-    <meta name="description" content="Macrometa OTT">
+    <meta name="title" content="OTT App" />
+    <meta name="description" content="Cox Edge OTT App" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
